<resources>
    <string name="app_name">Alien Companion</string>
    <string name="welcome_title">
        Alien Companion v1.0
    </string>
    <string name="welcome_message">
        Hi everyone!
        \n\n
          It\'s been a while since my last update but I wanted to make this one a bit special. This update marks the release of version 1.0 of Alien Companion, about 2 years
        after the original 0.1 alpha release. This update introduces many major new features, which I plan on improving and refining with future updates, as well as a lot of smaller improvements
        and bug fixes. Here are the highlights of this update:
        \n\n
            •   Two new post views. \'Classic\' view designed for easier voting on posts and \'Gallery\' view for image heavy subreddits, such as /r/gaming.\n
            •   A brand new FAB menu for easy access to frequently used actions, as well as a revamped comment navigation FAB menu with expanded functionality (including an AMA mode and the
        ability to search text).\n
            •   Filter profiles which allow you to filter out content by adding the appropriate filters.\n
            •   Improved sync functionality, allowing you to sync videos from the streamable.com domain and to sync links in self-text and comments. There\'s also a new
        interface for creating/editing sync profiles, with the added ability to set multiple schedules on the same sync profile.\n
            •   Numerous visual tweaks and additional customization options.
        \n\n
            As always, the full list of changes is available in the settings.
        \n\n
          Alien Companion has always been a free app with no ads or paid features and I\'ve decided that it will remain that way, but I\'ve also added the ability to donate through Google Play
        for anyone who wishes to contribute or show their appreciation.
        \n\n
          I would like thank everyone who sent me their feedback and bug reports. Developing this app has been a huge learning experience for me and it will continue to be as the app evolves
        and improves.
        \n\n
        IMPORTANT: If you\'re updating from a previous version, all user data and most synced data has been cleared. I also recommend checking the \'AlienCompanion\' folder inside your
        public pictures directory and deleting any leftover synced media that you deem unnecessary.
    </string>
    <string name="about_offline_mode_title">
        Offline mode and syncing
    </string>
    <string name="about_offline_mode">
        This subreddit/multireddit is currently syncing in the background. You can view any subreddits/multireddits/posts you\'ve synced, without a network connection, in offline
        mode. Use the \'Go offline/online\' option, located at the very top of the hamburger menu, to switch between modes. Alternatively, you can long tap the same option or a
        subreddit/multireddit to quickly switch between modes without a dialog prompt.
        \n\n
        You can also sync individual posts by using the \'Add to synced\' option from a post\'s menu. Those posts will be available in the \'Synced\' section of the
        app, located at the very bottom of the hamburger menu.
    </string>
    <string name="about_sync_profiles_title">
        About sync profiles
    </string>
    <string name="about_sync_profiles">
        Sync profiles are lists of subreddits/multireddits that you can sync easily by selecting \'Sync now\' on the profile or even schedule to sync automatically within a specified
        sync window. Scheduled syncs will occur exactly once inside each scheduled sync window. For example:
        \n\n
          If you have a sync profile with a schedule that reads \'5:00-7:00 Mon, Wed, Fri\', the app will sync that profile exactly 3 times inside that 5am-7am sync window every Monday,
        Wednesday and Friday.
        \n\n
          You can have multiple active schedules in a sync profile (for syncing multiple times a day), but it is recommended to only add the schedules you need to avoid unnecessary load
        on reddit\'s servers.
        \n\n
          In order for a sync profile to sync automatically, it has to be ACTIVE and have at least one schedule assigned to it. Scheduled syncs happen regardless of the last mode (online
        or offline) you used. Make sure that you have a working network connection during the scheduled sync windows.
        \n\n
            Scheduled sync profiles will sync their subreddits/multireddits at a time picked by the OS inside the specified sync window. This happens for two reasons:\n
            1. Android likes to group scheduled tasks and execute them together to avoid waking the CPU multiple times in order to save battery life.\n
            2. It wouldn\'t be very polite to reddit\'s severs if a lot of people decided to set their profiles to sync at precisely 7AM CST, for example.
    </string>
    <string name="about_filter_profiles_title">
        About filter profiles
    </string>
    <string name="about_filter_profiles">
        You can create filter profiles to filter out posts and subreddits by adding your desired filters to a profile. Filter profiles must be ACTIVE for their filters to work and
        they also apply to search results and synced content. Filters will apply to all subreddits/multireddits (including frontpage, popular and all) unless you add subreddit/multireddit
        restrictions. For NSFW filtering, use the corresponding option under \'Posts and comments\' settings.
    </string>
    <string name="about_donations_title">
        About donations
    </string>
    <string name="about_donations">
        Alien Companion and all its features are 100% free and the app displays no ads of any kind. Donations are completely optional and have been added as a means for users to show
        their appreciation and encourage future development.
    </string>
    <string name="crash_collection_title">

    </string>
    <string name="crash_collection_disclaimer">

    </string>
    <string name="crash_collection_confirmation">

    </string>
    <string name="user_over_18_title">
        NSFW (Not Safe For Work) content
    </string>
    <string name="user_over_18_info_text">
        Enabling this setting may cause the app to display offensive or inappropriate material which should only be viewed by people over the age of 18.
    </string>
    <string name="user_over_18_button_text">
        I am over 18
    </string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_options">SettingsActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_messages">Messages</string>
    <string name="drawer_user">User</string>
    <string name="drawer_subreddit">Subreddit</string>
    <string name="drawer_settings">Settings</string>
    <string name="reddit_frontpage">Frontpage</string>
    <string name="reddit_all">all</string>
    <string name="reddit_pics">pics</string>
    <string name="reddit_videos">videos</string>
    <string name="reddit_worldnews">worldnews</string>
    <string name="reddit_technology">technology</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_refresh">Refresh</string>
    <string name="sort_hot">What\'s Hot</string>
    <string name="sort_new">New</string>
    <string name="sort_rising">Rising</string>
    <string name="sort_top">Top</string>
    <string name="sort_controversial">Controversial</string>
    <string name="sort_hour">Hour</string>
    <string name="sort_day">Day</string>
    <string name="sort_week">Week</string>
    <string name="sort_month">Month</string>
    <string name="sort_year">Year</string>
    <string name="sort_all">All</string>
    <string name="sort_comments_top">Top</string>
    <string name="sort_comments_best">Best</string>
    <string name="sort_comments_new">New</string>
    <string name="sort_comments_old">Old</string>
    <string name="sort_comments_controversial">Controversial</string>
    <string name="sort_comments_random">Random</string>
    <string name="sort_comments_confidence">Confidence</string>
    <string name="options_general">General</string>
    <string name="options_appearance">Appearance</string>
    <string name="options_navigation">Navigation</string>
    <string name="options_posts">Posts</string>
    <string name="options_comments">Comments</string>
    <string name="options_other">Other</string>
    <string name="options_general_sub">General reader settings</string>
    <string name="options_appearance_sub">Change fonts, colors, themes and more</string>
    <string name="options_navigation_sub">Change the way you interact with the reader</string>
    <string name="options_posts_sub">Post specific options</string>
    <string name="options_comments_sub">Comment specific options</string>
    <string name="options_other_sub">Everything else</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="user_overview">Overview</string>
    <string name="user_comments">Comments</string>
    <string name="user_submitted">Submitted</string>
    <string name="sort_user_controversial">Controversial</string>
    <string name="sort_user_top">Top</string>
    <string name="sort_user_hot">Hot</string>
    <string name="sort_user_new">New</string>
    <string name="sort_relevance">Relevance</string>
    <string name="sort_comments">Comments</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_new_search">Search again</string>
    <string name="action_comments">Comments</string>
    <string name="action_open_browser">Open with..</string>
    <string name="action_browser_back">Back</string>
    <string name="action_browser_forward">Forward</string>
    <string name="user_gilded">gilded</string>
    <string name="user_upvoted">upvoted</string>
    <string name="user_downvoted">downvoted</string>
    <string name="user_hidden">hidden</string>
    <string name="user_saved">saved</string>
    <string name="action_submit_post">Submit post</string>
    <string name="action_hide_read">Hide read</string>
    <string name="action_reply">Reply</string>
    <string name="sync_posts">Sync posts</string>
    <string name="unread">Unread</string>
    <string name="comment_replies">Comment replies</string>
    <string name="post_replies">Post replies</string>
    <string name="username_mentions">Username mentions</string>
    <string name="action_report">Report</string>
    <string name="action_switch_view">Switch view</string>
    <string name="list_default">List</string>
    <string name="list_reversed">List (reversed)</string>
    <string name="cards">Cards</string>
    <string name="small_cards">Small cards</string>
    <string name="load_live_version">Load live version</string>
    <string name="sync_now">Sync now</string>
    <string name="view_sidebar">View sidebar</string>
    <string name="sync_profiles">Sync profiles</string>
    <string name="clear_synced">Clear synced</string>
    <string name="delete">Delete</string>
    <string name="view_synced">View synced</string>
    <string name="edit">Edit</string>
    <string name="pending_actions">Pending actions</string>
    <string name="action_share">Share</string>
    <string name="action_copy_link">Copy link address</string>
    <string name="remove">Remove</string>
    <string name="all">All</string>
    <string name="add_to_synced">Add to synced</string>
    <string name="classic">Classic</string>
    <string name="gallery">Gallery</string>
    <string name="locked_post">Locked post</string>
</resources>