<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/action_list_default" android:title="@string/list_default"
            android:orderInCategory="5"/>

        <item android:id="@+id/action_list_reversed" android:title="@string/list_reversed"
            android:orderInCategory="10"/>

        <item android:id="@+id/action_classic" android:title="@string/classic"
            android:orderInCategory="15"/>

        <item android:id="@+id/action_small_cards" android:title="@string/small_cards"
            android:orderInCategory="20"/>

        <item android:id="@+id/action_cards" android:title="@string/cards"
            android:orderInCategory="25"/>

        <item android:id="@+id/action_image_board" android:title="@string/gallery"
            android:orderInCategory="30" android:enabled="false"/>
    </group>

</menu>