<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gDyejeekis.aliencompanion.Activities.BrowserActivity">

    <item android:id="@+id/action_comments" android:title="@string/action_comments"
        android:icon="@mipmap/ic_comment_white_24dp" app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_back" android:title="@string/action_browser_back"
        android:icon="@mipmap/ic_arrow_back_white_24dp" app:showAsAction="always"/>

    <item android:id="@+id/action_forward" android:title="@string/action_browser_forward"
        android:icon="@mipmap/ic_arrow_forward_white_24dp" app:showAsAction="always"/>

    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:icon="@mipmap/ic_action_refresh" android:orderInCategory="99"
        app:showAsAction="never" />

    <item android:id="@+id/action_open_browser" android:title="@string/action_open_browser"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_load_live" android:title="@string/load_live_version"
        android:orderInCategory="105" app:showAsAction="never" />

    <item android:id="@+id/action_share_url" android:title="@string/action_share"
        android:orderInCategory="110" app:showAsAction="never" />
</menu>
