<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dyejeekis.aliencompanion.Activities.SearchActivity">

    <item android:id="@+id/action_sort" android:title="@string/action_sort"
        android:icon="@mipmap/ic_sort_white_24dp" app:showAsAction="always"/>

    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:icon="@mipmap/ic_refresh_white_24dp" app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_search" android:title="@string/action_new_search"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_switch_view" android:title="@string/action_switch_view"
        android:orderInCategory="105" app:showAsAction="never" />
</menu>
