<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gDyejeekis.aliencompanion.activities.PostActivity">

    <item android:id="@+id/action_reply" android:title="@string/action_reply"
        android:icon="@drawable/ic_reply_white_24dp" app:showAsAction="always"
        android:orderInCategory="10"/>

    <item android:id="@+id/action_post_locked" android:title="@string/locked_post"
        android:icon="@drawable/ic_lock_white_24dp" app:showAsAction="always"
        android:orderInCategory="15" android:visible="false"/>

    <item android:id="@+id/action_sort_comments" android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_24dp" app:showAsAction="always"
        android:orderInCategory="20"/>

    <item android:id="@+id/action_refresh_comments" android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp" app:showAsAction="ifRoom"
        android:orderInCategory="25"/>

    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
</menu>
