<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gDyejeekis.aliencompanion.Activities.UserActivity">

    <item android:id="@+id/action_sort" android:title="@string/action_sort"
        android:icon="@mipmap/ic_sort_white_24dp" app:showAsAction="always"/>

    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:icon="@mipmap/ic_refresh_white_24dp" app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_add_to_synced" android:title="@string/add_to_synced"
        android:icon="@mipmap/ic_file_download_white_24dp" app:showAsAction="ifRoom"/>

    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
</menu>
