<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeDialogBackgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(url)"
        android:id="@+id/textView_title"
        android:textColor="?attr/themeTextPrimaryColor"
        android:textSize="20sp"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_open_browser"
        android:id="@+id/textView_openBrowser"
        android:textColor="?attr/themeTextPrimaryColor"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="?attr/themeSelector" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_copy_link"
        android:id="@+id/textView_copyLink"
        android:textColor="?attr/themeTextPrimaryColor"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="?attr/themeSelector" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_share"
        android:id="@+id/textView_share"
        android:textColor="?attr/themeTextPrimaryColor"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="?attr/themeSelector" />
</LinearLayout>